# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  zero-to-production.md
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
