[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "=2.4.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
uuid = { version = "1.10.0", features = ["v4"] }

[dependencies.sqlx] 
version = "0.8"
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.12"
once_cell = "1"


